jsonrl/lex2.go
//line lex2.rl:1
// Copyright (C) 2022 Sneller, Inc.
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

// Code generated by ragel. DO NOT EDIT.

package jsonrl

import (
	"fmt"
	"unicode/utf8"
)

//line lex2.rl:84

//line lex2.go:32
const struct_field_start int = 1
const struct_field_first_final int = 57
const struct_field_error int = 0

const struct_field_en_main int = 1

//line lex2.rl:144

func (t *parser) lexField(b *reader) error {
	if !b.assertFill() {
		if b.err != nil {
			return b.err
		}
		return fmt.Errorf("%w (unexpected EOF looking for struct field)", ErrNoMatch)
	}
	needmore := false
	for b.err == nil {
		t.tok = tokDatum
		t.auxtok = tokDatum
		neg, nege, esc, fieldesc := false, false, false, false
		sbegin, send := 0, 0
		curi, cure, dc := uint64(0), int(0), int(0)
		var field []byte
		data := b.avail()
		cs, p, pe, eof := 0, 0, len(data), len(data)
		_ = eof

//line lex2.go:62
		{
			cs = struct_field_start
		}

//line lex2.go:67
		{
			if p == pe {
				goto _test_eof
			}
			switch cs {
			case 1:
				goto st_case_1
			case 0:
				goto st_case_0
			case 2:
				goto st_case_2
			case 3:
				goto st_case_3
			case 4:
				goto st_case_4
			case 5:
				goto st_case_5
			case 6:
				goto st_case_6
			case 7:
				goto st_case_7
			case 8:
				goto st_case_8
			case 57:
				goto st_case_57
			case 9:
				goto st_case_9
			case 10:
				goto st_case_10
			case 11:
				goto st_case_11
			case 12:
				goto st_case_12
			case 13:
				goto st_case_13
			case 14:
				goto st_case_14
			case 15:
				goto st_case_15
			case 16:
				goto st_case_16
			case 17:
				goto st_case_17
			case 18:
				goto st_case_18
			case 19:
				goto st_case_19
			case 20:
				goto st_case_20
			case 21:
				goto st_case_21
			case 22:
				goto st_case_22
			case 23:
				goto st_case_23
			case 24:
				goto st_case_24
			case 25:
				goto st_case_25
			case 26:
				goto st_case_26
			case 27:
				goto st_case_27
			case 28:
				goto st_case_28
			case 29:
				goto st_case_29
			case 30:
				goto st_case_30
			case 31:
				goto st_case_31
			case 32:
				goto st_case_32
			case 33:
				goto st_case_33
			case 34:
				goto st_case_34
			case 35:
				goto st_case_35
			case 36:
				goto st_case_36
			case 37:
				goto st_case_37
			case 38:
				goto st_case_38
			case 39:
				goto st_case_39
			case 40:
				goto st_case_40
			case 41:
				goto st_case_41
			case 42:
				goto st_case_42
			case 43:
				goto st_case_43
			case 44:
				goto st_case_44
			case 45:
				goto st_case_45
			case 46:
				goto st_case_46
			case 47:
				goto st_case_47
			case 48:
				goto st_case_48
			case 49:
				goto st_case_49
			case 50:
				goto st_case_50
			case 51:
				goto st_case_51
			case 52:
				goto st_case_52
			case 53:
				goto st_case_53
			case 54:
				goto st_case_54
			case 55:
				goto st_case_55
			case 56:
				goto st_case_56
			}
			goto st_out
		st1:
			if p++; p == pe {
				goto _test_eof1
			}
		st_case_1:
			switch data[p] {
			case 32:
				goto st1
			case 34:
				goto st2
			case 125:
				goto tr3
			}
			if 9 <= data[p] && data[p] <= 13 {
				goto st1
			}
			goto st0
		st_case_0:
		st0:
			cs = 0
			goto _out
		st2:
			if p++; p == pe {
				goto _test_eof2
			}
		st_case_2:
//line lex2.rl:59
			esc = false
			sbegin = p
//line lex2.rl:59
			send = p
//line lex2.go:221
			switch data[p] {
			case 34:
				goto tr5
			case 92:
				goto tr6
			}
			switch {
			case data[p] < 224:
				switch {
				case data[p] > 191:
					if 192 <= data[p] && data[p] <= 223 {
						goto st48
					}
				case data[p] >= 128:
					goto st0
				}
			case data[p] > 239:
				switch {
				case data[p] > 247:
					if 248 <= data[p] {
						goto st0
					}
				case data[p] >= 240:
					goto st53
				}
			default:
				goto st50
			}
			goto st3
		tr92:
//line lex2.rl:33
			{
				r, size := utf8.DecodeRune(data[p-2:])
				if size != 2 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st3
		tr100:
//line lex2.rl:39
			{
				r, size := utf8.DecodeRune(data[p-3:])
				if size != 3 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st3
		tr109:
//line lex2.rl:45
			{
				r, size := utf8.DecodeRune(data[p-4:])
				if size != 4 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st3
		st3:
			if p++; p == pe {
				goto _test_eof3
			}
		st_case_3:
//line lex2.rl:59
			send = p
//line lex2.go:285
			switch data[p] {
			case 34:
				goto tr5
			case 92:
				goto tr6
			}
			switch {
			case data[p] < 224:
				switch {
				case data[p] > 191:
					if 192 <= data[p] && data[p] <= 223 {
						goto st48
					}
				case data[p] >= 128:
					goto st0
				}
			case data[p] > 239:
				switch {
				case data[p] > 247:
					if 248 <= data[p] {
						goto st0
					}
				case data[p] >= 240:
					goto st53
				}
			default:
				goto st50
			}
			goto st3
		tr5:
//line lex2.rl:90

			field = data[sbegin:send]
			fieldesc = esc

			goto st4
		tr93:
//line lex2.rl:33
			{
				r, size := utf8.DecodeRune(data[p-2:])
				if size != 2 {
					fmt.Errorf("bad rune %x", r)
				}
			}
//line lex2.rl:90

			field = data[sbegin:send]
			fieldesc = esc

			goto st4
		tr101:
//line lex2.rl:39
			{
				r, size := utf8.DecodeRune(data[p-3:])
				if size != 3 {
					fmt.Errorf("bad rune %x", r)
				}
			}
//line lex2.rl:90

			field = data[sbegin:send]
			fieldesc = esc

			goto st4
		tr110:
//line lex2.rl:45
			{
				r, size := utf8.DecodeRune(data[p-4:])
				if size != 4 {
					fmt.Errorf("bad rune %x", r)
				}
			}
//line lex2.rl:90

			field = data[sbegin:send]
			fieldesc = esc

			goto st4
		st4:
			if p++; p == pe {
				goto _test_eof4
			}
		st_case_4:
//line lex2.go:369
			switch data[p] {
			case 32:
				goto st4
			case 58:
				goto st5
			}
			if 9 <= data[p] && data[p] <= 13 {
				goto st4
			}
			goto st0
		st5:
			if p++; p == pe {
				goto _test_eof5
			}
		st_case_5:
			switch data[p] {
			case 32:
				goto st5
			case 34:
				goto st6
			case 45:
				goto tr13
			case 91:
				goto tr15
			case 102:
				goto st30
			case 110:
				goto st35
			case 116:
				goto st39
			case 123:
				goto tr19
			}
			switch {
			case data[p] > 13:
				if 48 <= data[p] && data[p] <= 57 {
					goto tr14
				}
			case data[p] >= 9:
				goto st5
			}
			goto st0
		st6:
			if p++; p == pe {
				goto _test_eof6
			}
		st_case_6:
//line lex2.rl:59
			esc = false
			sbegin = p
//line lex2.rl:59
			send = p
//line lex2.go:421
			switch data[p] {
			case 34:
				goto st8
			case 92:
				goto tr22
			}
			switch {
			case data[p] < 224:
				switch {
				case data[p] > 191:
					if 192 <= data[p] && data[p] <= 223 {
						goto st14
					}
				case data[p] >= 128:
					goto st0
				}
			case data[p] > 239:
				switch {
				case data[p] > 247:
					if 248 <= data[p] {
						goto st0
					}
				case data[p] >= 240:
					goto st19
				}
			default:
				goto st16
			}
			goto st7
		tr33:
//line lex2.rl:33
			{
				r, size := utf8.DecodeRune(data[p-2:])
				if size != 2 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st7
		tr41:
//line lex2.rl:39
			{
				r, size := utf8.DecodeRune(data[p-3:])
				if size != 3 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st7
		tr50:
//line lex2.rl:45
			{
				r, size := utf8.DecodeRune(data[p-4:])
				if size != 4 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st7
		st7:
			if p++; p == pe {
				goto _test_eof7
			}
		st_case_7:
//line lex2.rl:59
			send = p
//line lex2.go:485
			switch data[p] {
			case 34:
				goto st8
			case 92:
				goto tr22
			}
			switch {
			case data[p] < 224:
				switch {
				case data[p] > 191:
					if 192 <= data[p] && data[p] <= 223 {
						goto st14
					}
				case data[p] >= 128:
					goto st0
				}
			case data[p] > 239:
				switch {
				case data[p] > 247:
					if 248 <= data[p] {
						goto st0
					}
				case data[p] >= 240:
					goto st19
				}
			default:
				goto st16
			}
			goto st7
		tr34:
//line lex2.rl:33
			{
				r, size := utf8.DecodeRune(data[p-2:])
				if size != 2 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st8
		tr42:
//line lex2.rl:39
			{
				r, size := utf8.DecodeRune(data[p-3:])
				if size != 3 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st8
		tr51:
//line lex2.rl:45
			{
				r, size := utf8.DecodeRune(data[p-4:])
				if size != 4 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st8
		st8:
			if p++; p == pe {
				goto _test_eof8
			}
		st_case_8:
//line lex2.go:547
			switch data[p] {
			case 32:
				goto st8
			case 44:
				goto tr26
			case 125:
				goto tr27
			}
			if 9 <= data[p] && data[p] <= 13 {
				goto st8
			}
			goto st0
		tr3:
//line lex2.rl:138
			t.tok = tokRBrace
			goto ret
			goto st57
		tr15:
//line lex2.rl:83
			t.tok = tokLBrack
//line lex2.rl:132

			t.output.beginField(field, fieldesc)
			goto ret

			goto st57
		tr19:
//line lex2.rl:82
			t.tok = tokLBrace
//line lex2.rl:132

			t.output.beginField(field, fieldesc)
			goto ret

			goto st57
		tr26:
//line lex2.rl:96
			t.auxtok = tokComma
//line lex2.rl:127

			t.output.beginField(field, fieldesc)
			t.output.parseString(data[sbegin:send], esc)
			goto ret

			goto st57
		tr27:
//line lex2.rl:97
			t.auxtok = tokRBrace
//line lex2.rl:127

			t.output.beginField(field, fieldesc)
			t.output.parseString(data[sbegin:send], esc)
			goto ret

			goto st57
		tr57:
//line lex2.rl:96
			t.auxtok = tokComma
//line lex2.rl:120
			{
				i := int64(curi)
				if neg {
					i = -i
				}
				t.output.beginField(field, fieldesc)
				t.output.parseInt(i)
				goto ret
			}
			goto st57
		tr59:
//line lex2.rl:97
			t.auxtok = tokRBrace
//line lex2.rl:120
			{
				i := int64(curi)
				if neg {
					i = -i
				}
				t.output.beginField(field, fieldesc)
				t.output.parseInt(i)
				goto ret
			}
			goto st57
		tr61:
//line lex2.rl:96
			t.auxtok = tokComma
//line lex2.rl:115

			t.output.beginField(field, fieldesc)
			atof(t.output, curi, dc, neg)
			goto ret

			goto st57
		tr64:
//line lex2.rl:97
			t.auxtok = tokRBrace
//line lex2.rl:115

			t.output.beginField(field, fieldesc)
			atof(t.output, curi, dc, neg)
			goto ret

			goto st57
		tr67:
//line lex2.rl:67

			if nege {
				cure = -cure
			}
			dc += cure

//line lex2.rl:96
			t.auxtok = tokComma
//line lex2.rl:115

			t.output.beginField(field, fieldesc)
			atof(t.output, curi, dc, neg)
			goto ret

			goto st57
		tr70:
//line lex2.rl:67

			if nege {
				cure = -cure
			}
			dc += cure

//line lex2.rl:97
			t.auxtok = tokRBrace
//line lex2.rl:115

			t.output.beginField(field, fieldesc)
			atof(t.output, curi, dc, neg)
			goto ret

			goto st57
		tr75:
//line lex2.rl:96
			t.auxtok = tokComma
//line lex2.rl:110

			t.output.beginField(field, fieldesc)
			t.output.parseBool(false)
			goto ret

			goto st57
		tr76:
//line lex2.rl:97
			t.auxtok = tokRBrace
//line lex2.rl:110

			t.output.beginField(field, fieldesc)
			t.output.parseBool(false)
			goto ret

			goto st57
		tr80:
//line lex2.rl:96
			t.auxtok = tokComma
//line lex2.rl:100

			t.output.beginField(field, fieldesc)
			t.output.parseNull()
			goto ret

			goto st57
		tr81:
//line lex2.rl:97
			t.auxtok = tokRBrace
//line lex2.rl:100

			t.output.beginField(field, fieldesc)
			t.output.parseNull()
			goto ret

			goto st57
		tr85:
//line lex2.rl:96
			t.auxtok = tokComma
//line lex2.rl:105

			t.output.beginField(field, fieldesc)
			t.output.parseBool(true)
			goto ret

			goto st57
		tr86:
//line lex2.rl:97
			t.auxtok = tokRBrace
//line lex2.rl:105

			t.output.beginField(field, fieldesc)
			t.output.parseBool(true)
			goto ret

			goto st57
		st57:
			if p++; p == pe {
				goto _test_eof57
			}
		st_case_57:
//line lex2.go:745
			goto st0
		tr22:
//line lex2.rl:28
			esc = true
			goto st9
		tr35:
//line lex2.rl:33
			{
				r, size := utf8.DecodeRune(data[p-2:])
				if size != 2 {
					fmt.Errorf("bad rune %x", r)
				}
			}
//line lex2.rl:28
			esc = true
			goto st9
		tr43:
//line lex2.rl:39
			{
				r, size := utf8.DecodeRune(data[p-3:])
				if size != 3 {
					fmt.Errorf("bad rune %x", r)
				}
			}
//line lex2.rl:28
			esc = true
			goto st9
		tr52:
//line lex2.rl:45
			{
				r, size := utf8.DecodeRune(data[p-4:])
				if size != 4 {
					fmt.Errorf("bad rune %x", r)
				}
			}
//line lex2.rl:28
			esc = true
			goto st9
		st9:
			if p++; p == pe {
				goto _test_eof9
			}
		st_case_9:
//line lex2.go:789
			switch data[p] {
			case 34:
				goto st7
			case 47:
				goto st7
			case 92:
				goto st7
			case 102:
				goto st7
			case 110:
				goto st7
			case 114:
				goto st7
			case 117:
				goto st10
			}
			switch {
			case data[p] > 98:
				if 116 <= data[p] && data[p] <= 118 {
					goto st7
				}
			case data[p] >= 97:
				goto st7
			}
			goto st0
		st10:
			if p++; p == pe {
				goto _test_eof10
			}
		st_case_10:
			switch {
			case data[p] < 65:
				if 48 <= data[p] && data[p] <= 57 {
					goto st11
				}
			case data[p] > 70:
				if 97 <= data[p] && data[p] <= 102 {
					goto st11
				}
			default:
				goto st11
			}
			goto st0
		st11:
			if p++; p == pe {
				goto _test_eof11
			}
		st_case_11:
			switch {
			case data[p] < 65:
				if 48 <= data[p] && data[p] <= 57 {
					goto st12
				}
			case data[p] > 70:
				if 97 <= data[p] && data[p] <= 102 {
					goto st12
				}
			default:
				goto st12
			}
			goto st0
		st12:
			if p++; p == pe {
				goto _test_eof12
			}
		st_case_12:
			switch {
			case data[p] < 65:
				if 48 <= data[p] && data[p] <= 57 {
					goto st13
				}
			case data[p] > 70:
				if 97 <= data[p] && data[p] <= 102 {
					goto st13
				}
			default:
				goto st13
			}
			goto st0
		st13:
			if p++; p == pe {
				goto _test_eof13
			}
		st_case_13:
			switch {
			case data[p] < 65:
				if 48 <= data[p] && data[p] <= 57 {
					goto st7
				}
			case data[p] > 70:
				if 97 <= data[p] && data[p] <= 102 {
					goto st7
				}
			default:
				goto st7
			}
			goto st0
		tr36:
//line lex2.rl:33
			{
				r, size := utf8.DecodeRune(data[p-2:])
				if size != 2 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st14
		tr44:
//line lex2.rl:39
			{
				r, size := utf8.DecodeRune(data[p-3:])
				if size != 3 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st14
		tr53:
//line lex2.rl:45
			{
				r, size := utf8.DecodeRune(data[p-4:])
				if size != 4 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st14
		st14:
			if p++; p == pe {
				goto _test_eof14
			}
		st_case_14:
//line lex2.go:919
			if 128 <= data[p] && data[p] <= 191 {
				goto st15
			}
			goto st0
		st15:
			if p++; p == pe {
				goto _test_eof15
			}
		st_case_15:
//line lex2.rl:59
			send = p
//line lex2.go:931
			switch data[p] {
			case 34:
				goto tr34
			case 92:
				goto tr35
			}
			switch {
			case data[p] < 224:
				switch {
				case data[p] > 191:
					if 192 <= data[p] && data[p] <= 223 {
						goto tr36
					}
				case data[p] >= 128:
					goto st0
				}
			case data[p] > 239:
				switch {
				case data[p] > 247:
					if 248 <= data[p] {
						goto st0
					}
				case data[p] >= 240:
					goto tr38
				}
			default:
				goto tr37
			}
			goto tr33
		tr37:
//line lex2.rl:33
			{
				r, size := utf8.DecodeRune(data[p-2:])
				if size != 2 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st16
		tr45:
//line lex2.rl:39
			{
				r, size := utf8.DecodeRune(data[p-3:])
				if size != 3 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st16
		tr54:
//line lex2.rl:45
			{
				r, size := utf8.DecodeRune(data[p-4:])
				if size != 4 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st16
		st16:
			if p++; p == pe {
				goto _test_eof16
			}
		st_case_16:
//line lex2.go:993
			if 128 <= data[p] && data[p] <= 191 {
				goto st17
			}
			goto st0
		st17:
			if p++; p == pe {
				goto _test_eof17
			}
		st_case_17:
			if 128 <= data[p] && data[p] <= 191 {
				goto st18
			}
			goto st0
		st18:
			if p++; p == pe {
				goto _test_eof18
			}
		st_case_18:
//line lex2.rl:59
			send = p
//line lex2.go:1014
			switch data[p] {
			case 34:
				goto tr42
			case 92:
				goto tr43
			}
			switch {
			case data[p] < 224:
				switch {
				case data[p] > 191:
					if 192 <= data[p] && data[p] <= 223 {
						goto tr44
					}
				case data[p] >= 128:
					goto st0
				}
			case data[p] > 239:
				switch {
				case data[p] > 247:
					if 248 <= data[p] {
						goto st0
					}
				case data[p] >= 240:
					goto tr46
				}
			default:
				goto tr45
			}
			goto tr41
		tr38:
//line lex2.rl:33
			{
				r, size := utf8.DecodeRune(data[p-2:])
				if size != 2 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st19
		tr46:
//line lex2.rl:39
			{
				r, size := utf8.DecodeRune(data[p-3:])
				if size != 3 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st19
		tr55:
//line lex2.rl:45
			{
				r, size := utf8.DecodeRune(data[p-4:])
				if size != 4 {
					fmt.Errorf("bad rune %x", r)
				}
			}
			goto st19
		st19:
			if p++; p == pe {
				goto _test_eof19
			}
		st_case_19:
//line lex2.go:1076
			if 128 <= data[p] && data[p] <= 191 {
				goto st20
			}
			goto st0
		st20:
			if p++; p == pe {
				goto _test_eof20
			}
		st_case_20:
			if 128 <= data[p] && data[p] <= 191 {
				goto st21
			}
			goto st0
		st21:
			if p++; p == pe {
				goto _test_eof21
			}
		st_case_21:
			if 128 <= data[p] && data[p] <= 191 {
				goto st22
			}
			goto st0
		st22:
			if p++; p == pe {
				goto _test_eof22
			}
		st_case_22:
//line lex2.rl:59
			send = p
//line lex2.go:1106
			switch data[p] {
			case 34:
				goto tr51
			case 92:
				goto tr52
			}
			switch {
			case data[p] < 224:
				switch {
				case data[p] > 191:
					if 192 <= data[p] && data[p] <= 223 {
						goto tr53
					}
				case data[p] >= 128:
					goto st0
				}
			case data[p] > 239:
				switch {
				case data[p] > 247:
					if 248 <= data[p] {
						goto st0
					}
				case data[p] >= 240:
					goto tr55
				}
			default:
				goto tr54
			}
			goto tr50
		tr13:
//line lex2.rl:62
			neg = true
//line lex2.rl:77
			neg = true
			goto st23
		st23:
			if p++; p == pe {
				goto _test_eof23
			}
		st_case_23:
//line lex2.go:1147
			if 48 <= data[p] && data[p] <= 57 {
				goto tr14
			}
			goto st0
